plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.8' apply false
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'io.github.dailystruggle'
version = '3.0.0-beta.1'

spotless {
    java {
        target 'rtp-*/**/*.java', 'addons/**/*.java'
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

allprojects {
    group = 'io.github.dailystruggle'
    version = '3.0.0-beta.1'

    repositories {
        mavenCentral()
        maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
        maven { url 'https://repo.papermc.io/repository/maven-public/' }
        maven { url 'https://repo.papermc.io/repository/maven-snapshots/' }
        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
        maven { url 'https://jitpack.io' }
        maven { url 'https://repo.codemc.io/repository/maven-public/' }
        maven { url 'https://maven.fabricmc.net/' }
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    dependencies {
        compileOnly 'org.jetbrains:annotations:24.1.0'
        // Checker Framework qualifier annotations (compile-time only; not shipped in JARs).
        // The Resource Leak Checker reads @MustCall, @Owning, and @EnsuresCalledMethods
        // from this artifact during annotation processing.
        compileOnly 'org.checkerframework:checker-qual:3.42.0'
        testCompileOnly 'org.checkerframework:checker-qual:3.42.0'
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.mockito:mockito-core:5.5.0'
        testImplementation 'org.jetbrains:annotations:24.1.0'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }

    apply plugin: 'jacoco'
    jacoco { toolVersion = "0.8.11" }
    tasks.withType(Test) { finalizedBy jacocoTestReport }
    jacocoTestReport {
        dependsOn test
        reports { html.required = true; xml.required = true }
    }

    processResources {
        inputs.property "version", project.version
        filesMatching("plugin.yml") {
            expand "version": project.version
        }
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }
}
